# siminym-ja

./: .gitignore  README.md  all.lst  build-all-db.js  build-db.sh  build-dict.sh  build-list.js  build.js  build.sh  deno.json  game.js  game.lst  package-lock.json  pyproject.toml  reduce.js  reduce.py  similars.py  words.lst
docs/: index.html  index.js  sw.js
docs/db/: config.json  db.sqlite3.005
docs/db/1000/: config.json  db.sqlite3.000
docs/db/10000/: config.json  db.sqlite3.000
docs/db/120000/: config.json
docs/db/20000/: config.json
docs/db/3000/: config.json  db.sqlite3.000
docs/db/30000/: config.json
docs/db/40000/: config.json  db.sqlite3.001
docs/db/5000/: config.json  db.sqlite3.000
docs/db/80000/: config.json  db.sqlite3.002
docs/favicon/: site.webmanifest
src/: index.html  index.js  sw.js
src/favicon/: site.webmanifest
