[project]
name = "siminym-ja"
version = "0.1.0"
description = "類似度の高い基本語彙をまとめた辞書です。"
authors = [
    { name = "marmooo", email = "marmooo@users.noreply.github.com" }
]
dependencies = [
    "pymagnitude~=0.1.143",
    "fasteners>=0.19",
    "annoy>=1.17.3",
    "numpy~=1.24.3",
    "xxhash>=3.4.1",
    "lz4>=4.3.3",
    "h5py>=3.10.0",
    "torch>=2.1.2",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
hello = "siminym_ja:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["python/siminym_ja"]
